# Emsight

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
frontend/: package.json
frontend/src/: App.vue
frontend/src/components/: List.vue  Scatter.vue
src/backend/: Dockerfile  main.py
src/backend/classes/: crud.py  database.py  models.py  schemas.py
src/bert/: Dockerfile
src/frontend/: package.json
src/frontend/src/: App.vue
src/frontend/src/components/: List.vue  Scatter.vue  dimreduction.js
